--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ a {
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
+
 body {
   color: #040404;
   font-style: 14px;
@@ -25,12 +29,17 @@ body {
   font-family: "Roboto Condensed", sans-serif;
 }
 
-.container {
+.big_container {
   max-width: 1220px;
   padding: 0 10px;
   margin: 0 auto;
 }
 
+.container {
+  max-width: 920px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
 .header {
   padding-top: 25px;
   position: absolute;
@@ -107,6 +116,389 @@ body {
 
 .promo__arrow {
   margin-top: auto;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   align-self: center;
+}
+
+.info {
+  margin-bottom: 100px;
+}
+
+.info__part {
+  padding-top: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.info__part_table_third {
+  padding-top: 66px;
+}
+
+.info__part_one {
+  display: block;
+}
+
+.info__title {
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  font-size: 32px;
+  font-weight: 300;
+}
+
+.info__part_textbox {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.info__text {
+  flex-basis: 440px;
+  padding-top: 30px;
+  margin-bottom: 30px;
+}
+
+.info__part_img {
+  object-fit: cover;
+}
+
+.info__content {
+  flex-basis: 415px;
+}
+
+.info__part_second .info__text {
+  max-width: 350px;
+}
+
+.info__part_table_third .info__text {
+  max-width: 377px;
+}
+
+.info__table {
+  flex-basis: 450px;
+  border-bottom: 1px solid #040404;
+  position: relative;
+  top: 20px;
+}
+.info__table::before {
+  content: "";
+  border-top: 1px solid #040404;
+  position: absolute;
+  width: 100%;
+  top: -20px;
+}
+
+.info__table td {
+  padding-bottom: 20px;
+}
+
+.track {
+  background-image: url(../images/track-bg.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.track__title {
+  padding-top: 50px;
+  padding-bottom: 30px;
+  font-size: 32px;
+  font-weight: 300;
+}
+.track__inner {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-bottom: 90px;
+}
+
+.track__text {
+  max-width: 435px;
+}
+
+.tracki__img {
+  margin-top: auto;
+  margin-bottom: 90px;
+  /*margin: auto auto 90px auto;*/
+}
+.evo {
+  font-size: 14px;
+  margin-bottom: 100px;
+}
+
+.evo-black {
+  background-color: #363636;
+  padding: 100px 0 50px;
+  color: #fff;
+}
+
+.evo-black__inner {
+  position: relative;
+}
+
+.evo-black__inner::before {
+  content: "";
+  background-image: url(../images/doc-1.svg);
+  position: absolute;
+  width: 185px;
+  height: 213px;
+  top: 210px;
+  left: -130px;
+}
+
+.evo-black__inner::after {
+  content: "";
+  background-image: url(../images/doc-2.svg);
+  position: absolute;
+  width: 498px;
+  height: 572px;
+  top: 290px;
+  left: -40x;
+}
+
+.evo-black__info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.evo-black__title {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 32px;
+  padding-right: 50px;
+}
+
+.evo-black__infobox {
+  flex-basis: 437px;
+}
+
+.evo-black__text {
+  font-size: 14px;
+  margin-bottom: 30px;
+}
+
+.evo__black_img {
+  display: block;
+  margin: 170px auto 60px;
+  position: relative;
+  z-index: 1;
+}
+
+.evo__descr_list {
+  display: flex;
+  justify-content: center;
+  gap: 0 60px;
+}
+
+.evo__descr_list dd {
+  text-transform: uppercase;
+}
+
+.evo-white__inner {
+  padding-top: 125px;
+  position: relative;
+}
+
+.evo-white__inner::before {
+  content: "";
+  background-image: url(../images/doc-3.png);
+  position: absolute;
+  width: 274px;
+  height: 257px;
+  top: -40px;
+  left: 360px;
+}
+
+.evo-white__inner::after {
+  content: "";
+  background-image: url(../images/doc-4.png);
+  position: absolute;
+  width: 324px;
+  height: 311px;
+  top: 115px;
+  left: 600px;
+}
+
+.evo-white__text {
+  margin-bottom: 30px;
+}
+
+.evo-white__text:first-child {
+  max-width: 285px;
+}
+
+.evo-white__text:nth-child(2) {
+  max-width: 437px;
+}
+
+.evo-white__text:nth-child(3) {
+  max-width: 590px;
+}
+
+.evo-white__video {
+  margin-top: 100px;
+  background-image: url(../images/evo-video.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 264px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.evo-white__video_link span {
+  display: block;
+  color: #fff;
+}
+
+.blog {
+  margin-bottom: 100px;
+}
+
+.blog__title {
+  font-weight: 300;
+  font-style: 32px;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.blog__item_img {
+  margin-bottom: 20px;
+}
+
+.blog__item_title {
+  font-weight: 400;
+  font-style: 20px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  min-height: 46px;
+}
+
+.blot__item_text {
+  margin-bottom: 10px;
+}
+
+.blog__item_link {
+  font-style: 12px;
+  color: #363636;
+}
+
+.blog__slider {
+  position: relative;
+  padding-top: 50px;
+  margin-bottom: 100px;
+}
+
+.blog__button {
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 50%;
+}
+
+.swiper-button-left {
+  transform: translate(-50px);
+}
+.swiper-button-right {
+  transform: translate(8px);
+}
+
+.blog__quote {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.blog__quote_box {
+  flex-basis: 434px;
+}
+
+.blockquote {
+  margin-bottom: 30px;
+}
+
+.blockquote__name {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.blockquote__name span {
+  display: block;
+  font-style: 12px;
+  color: #9f6b08;
+  margin-bottom: 3px;
+}
+
+.blockquote__text {
+  font-style: italic;
+}
+
+.footer {
+  padding: 100px 0 80px;
+  background-color: #363636;
+  color: #fff;
+}
+
+.footer__title {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 32px;
+  margin-bottom: 50px;
+}
+.footer__top {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+.footer__info_item {
+  margin-bottom: 40px;
+}
+
+.footer__info_item dt,
+.footer__address_title {
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.footer__info_item dd {
+  margin-bottom: 10px;
+}
+
+.footer__address {
+  flex: basis 462px;
+}
+
+.social__list {
+  display: flex;
+  gap: 0 20px;
+  align-self: center;
+}
+
+#map {
+  height: 250px;
+  background-color: green;
+}
+
+.footer__address_text {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.footer__bottom {
+  margin-top: 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__adress_map {
+  cursor: pointer;
+}
+
+.footer__maps {
+  width: 100%;
+  height: 250px;
 }
